--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,18 +2,18 @@
   "landingPage": {
     "title": "EMODA",
     "description": "Nuestro emprendimiento en el sector textil nace en el año 2003, Oscar y yo creamos artesanías Milagros del cual nuestros primeros productos fueron al mercado local. Fruto de nuestra experiencia iniciamos nuestra propia identidad, en el año 2011 creamos EMODA ALPACAS EIRL, nombre conformado por las iniciales de los nombres de nuestra familia, nuestra primera participación en Perú Moda en el mismo año nos dio la visión para posicionar nuestra marca y nuestros productos a nivel nacional e internacional.",
-    "mision":"Misión",
-    "misionDescription":"Somos una empresa, dedicada a la fabricación, producción y comercialización de prendas de vestir elaboradas con fibra de alpaca; dirigido al mercado nacional e internacional, teniendo el firme compromiso de aplicar y promover las buenas prácticas de comercio justo, con nuestros colaboradores, proveedores y clientes; Además, de incentivar el cuidado, protección y conservación del medio ambiente. Por ello, nuestra misión es reflejar el valor de la alpaca en nuestras prendas, vender Comodidad, confort y elegancia.",
-    "vision":"Visión",
-    "visionDescription":"Nuestro objetivo es posicionar una marca representativa de la fibra de alpaca, permanecer en el mercado nacional y ampliar nuestras ventas internacionales. Continuando con nuestras buenas prácticas, ampliar nuestra base de produccióne innovar nuevas técnicas y procesos.",
-    "production":"producción",
-    "productionDescription":"Contamos con dos talleres, brindado oportunidad laboral a personas vulnerables, en ellos participan 40 mujeres trabajadoras capacitadas en los diversos procesos de producción. Tenemos implementadas máquinas manuales tarjeteras e intarsieras, nuestra capacidad de producción en tarjeta es de 300 a 400 prendas por mes y en intarsia 40 prendas por mes. Contamos con la Certificación de Comercio Justo y realizamos exportaciones a Canadá, Alemania, España, Colombia y EE.UU",
-    "category":"Categorías",
-    "contactenos":"Contáctenos",
-    "celular":"Celular:",
-    "email":"Correo:",
-    "descrip":"Descripción:",
-    "colors":"Colores:",
-    "sizes":"Tallas:"
+    "mision": "Misión",
+    "misionDescription": "Somos una empresa, dedicada a la fabricación, producción y comercialización de prendas de vestir elaboradas con fibra de alpaca; dirigido al mercado nacional e internacional, teniendo el firme compromiso de aplicar y promover las buenas prácticas de comercio justo, con nuestros colaboradores, proveedores y clientes; Además, de incentivar el cuidado, protección y conservación del medio ambiente. Por ello, nuestra misión es reflejar el valor de la alpaca en nuestras prendas, vender Comodidad, confort y elegancia.",
+    "vision": "Visión",
+    "visionDescription": "Nuestro objetivo es posicionar una marca representativa de la fibra de alpaca, permanecer en el mercado nacional y ampliar nuestras ventas internacionales. Continuando con nuestras buenas prácticas, ampliar nuestra base de produccióne innovar nuevas técnicas y procesos.",
+    "production": "Producción",
+    "productionDescription": "Contamos con dos talleres, brindado oportunidad laboral a personas vulnerables, en ellos participan 40 mujeres trabajadoras capacitadas en los diversos procesos de producción. Tenemos implementadas máquinas manuales tarjeteras e intarsieras, nuestra capacidad de producción en tarjeta es de 300 a 400 prendas por mes y en intarsia 40 prendas por mes. Contamos con la Certificación de Comercio Justo y realizamos exportaciones a Canadá, Alemania, España, Colombia y EE.UU",
+    "category": "Categorías",
+    "contactenos": "Contáctenos",
+    "celular": "Celular:",
+    "email": "Correo:",
+    "descrip": "Descripción:",
+    "colors": "Colores:",
+    "sizes": "Tallas:"
   }
 }
